--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
 PORT = portNumber
+DB_PORT = databasePort
+DB_USER = databaseUsername
+DB_HOST = databaseHost
+DB_NAME = databaseName
+DB_PASSWORD = databasePassword
