--- a/package.json
+++ b/package.json
@@ -2,25 +2,30 @@
   "name": "haaflah-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./dist/server.js",
-    "dev": "nodemon ./src/server.ts",
-    "build": "tsc --build"
+    "start": "node --env-file=.env src/server.js",
+    "dev": "nodemon src/server.js",
+    "build": "tsc --build",
+    "up": "npx sequelize-cli db:migrate",
+    "down": "npx sequelize-cli db:migrate:undo",
+    "downA": "npx sequelize-cli db:migrate:undo:all",
+    "MS": "npx sequelize-cli migration:generate --name"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "module",
   "devDependencies": {
-    "@types/express": "^5.0.3",
     "nodemon": "^3.1.10",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "sequelize-cli": "^6.6.3"
   },
   "dependencies": {
     "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "pg": "^8.16.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.7"
   }
 }
