--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,20 @@
-PORT = portNumber
-DB_PORT = databasePort
-DB_USER = databaseUsername
-DB_HOST = databaseHost
-DB_NAME = databaseName
-DB_PASSWORD = databasePassword
+# Database configuration
+DB_HOST=
+DB_PORT=
+DB_USER=
+DB_PASSWORD=
+DB_NAME=
+
+#  JWT configuration
+JWT_SECRET=
+
+# Application configuration
+FRONTEND_URL=
+PORT=
+
+# SMTP configuration
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USER=
+SMTP_PASS=
+EMAIL_FROM=
