feat(email): implement email queue with Bull and Redis integration

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,8 @@ SMTP_PORT=
 SMTP_USER=
 SMTP_PASS=
 EMAIL_FROM=
+
+# Redis configuration (for background jobs)
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
