--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "bcrypt": "^6.0.0",
     "bull": "^4.16.5",
     "cors": "^2.8.5",
-    "csv-writer": "^1.6.0",
+  "csv-writer": "^1.6.0",
+  "csv-parse": "^5.5.6",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "ioredis": "^5.8.1",
@@ -34,6 +35,7 @@
     "nodemailer": "^7.0.9",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "node-fetch": "^3.3.2"
   }
 }
